add Google Analytics

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -21,6 +21,15 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BWGNCP62MT"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-BWGNCP62MT');
+    </script>
 </body>
 
 </html>
