Add scrolling to Continue Reading

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -40,17 +40,30 @@
         }
     </script>
     <script>
-        (() => {
-            'use strict'
-            
-            const setTheme = function () {
-                if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
-                    document.documentElement.setAttribute('data-bs-theme', 'dark')
+            (() => {
+                'use strict'
+
+                const setTheme = function () {
+                    if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+                        document.documentElement.setAttribute('data-bs-theme', 'dark')
+                    }
+                }
+
+                setTheme()
+            })()
+    </script>
+    <script>
+        window.blazorHelpers = {
+            scrollToFragment: (elementId) => {
+                var element = document.getElementById(elementId);
+
+                if (element) {
+                    element.scrollIntoView({
+                        behavior: 'smooth'
+                    });
                 }
             }
-
-            setTheme()
-        })()
+        };
     </script>
     <script src="_framework/blazor.webassembly.js"></script>
     <!-- Google tag (gtag.js) -->
