--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -37,7 +37,7 @@
     <script>
         window.highlightSnippet = function () {
             document.querySelectorAll('pre code').forEach((el) => {
-                hljs.highlightBlock(el);
+                hljs.highlightElement(el);
             });
         }
     </script>
