--- a/src/mohdali.github.io/wwwroot/index.html
+++ b/src/mohdali.github.io/wwwroot/index.html
@@ -27,6 +27,8 @@
     </div>
     
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+
+    <script src="_content/BlogEngine/BlogEngine.min.js"></script>
     
     <script src="_framework/blazor.webassembly.js"></script>
     <!-- Google tag (gtag.js) -->
