--- a/src/mohdali.github.io/wwwroot/index.html
+++ b/src/mohdali.github.io/wwwroot/index.html
@@ -13,8 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     
-    <link href="css/app.css" rel="stylesheet" />    
-    <link href="mohdali.github.io.styles.css" rel="stylesheet" />
+    <link href="css/app.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -29,6 +28,8 @@
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 
     <script src="_content/BlogEngine/BlogEngine.min.js"></script>
+
+    <script src="js/app.js"></script>
     
     <script src="_framework/blazor.webassembly.js"></script>
     <!-- Google tag (gtag.js) -->
